All files updated

--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 ## Environment variables for Suriya-ES Portfolio
 
-#Cloudinary Configuration
-VITE_FIREBASE_APP_ID=https://api.cloudinary.com/v1_1/dq7pfdfcj/image/upload
-VITE_CloudName=dq7pfdfcj
-VITE_PresetName=Instantfood
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+VITE_FIREBASE_DATABASE_URL=https://your_project_id-default-rtdb.firebaseio.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
 
-#Firebase Realtime Database URL
-VITE_FIREBASE_API_KEY=AIzaSyDlz1wkUeCYIvoAUMpHMO3fCMemqXO_S0I
-VITE_FIREBASE_AUTH_DOMAIN=suriyaes-portfolio.firebaseapp.com
-VITE_FIREBASE_DATABASE_URL=https://suriyaes-portfolio-default-rtdb.firebaseio.com
-VITE_FIREBASE_PROJECT_ID=suriyaes-portfolio,
-VITE_FIREBASE_STORAGE_BUCKET=suriyaes-portfolio.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=300018458917
-VITE_FIREBASE_APP_ID= 1:300018458917:web:ec0676dc33f5b66aa2bacc
+# Cloudinary Configuration
+VITE_CloudName=your_cloud_name
+VITE_PresetName=your_upload_preset
+VITE_Cloudurl=https://api.cloudinary.com/v1_1/your_cloud_name/image/upload
 
 
 #web3forms Access Key
-VITE_WEB3FORMS_ACCESS_KEY=
+VITE_WEB3FORMS_ACCESS_KEY=use your own key from web3forms.com Admin side
