--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-scroll": "^1.9.3"
