--- a/.env
+++ b/.env
@@ -1,19 +1,18 @@
 ## Environment variables for Suriya-ES Portfolio
 
-# Firebase Configuration
-VITE_FIREBASE_API_KEY=your_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-VITE_FIREBASE_DATABASE_URL=https://your_project_id-default-rtdb.firebaseio.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+#Cloudinary Configuration
+VITE_CLOUDINARY_URL=your_cloudinary_url_here
+VITE_CloudName=your_cloudname_here
+VITE_PresetName=your_presetname_here
 
-# Cloudinary Configuration
-VITE_CloudName=your_cloud_name
-VITE_PresetName=your_upload_preset
-VITE_Cloudurl=https://api.cloudinary.com/v1_1/your_cloud_name/image/upload
-
+#Firebase Realtime Database URL
+VITE_FIREBASE_API_KEY=your_firebase_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain_here
+VITE_FIREBASE_DATABASE_URL=your_firebase_database_url_here
+VITE_FIREBASE_PROJECT_ID=your_firebase_project_id_here
+VITE_FIREBASE_STORAGE_BUCKET=your_firebase_storage_bucket_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id_here
+VITE_FIREBASE_APP_ID=your_firebase_app_id_here
 
 #web3forms Access Key
-VITE_WEB3FORMS_ACCESS_KEY=use your own key from web3forms.com Admin side
+VITE_WEB3FORMS_ACCESS_KEY=your_web3forms_access_key_here
