--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
+      "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
@@ -14,12 +14,18 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(css|js)",
+        "source": "**/*.@(js|css|png|jpg|jpeg|svg|webp|gif|ico)",
         "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000"
-          }
+          { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+        ]
+      },
+      {
+        "source": "**",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache" },
+          { "key": "X-XSS-Protection", "value": "" },
+          { "key": "X-Frame-Options", "value": "" },
+          { "key": "Content-Security-Policy", "value": "frame-ancestors 'none'" }
         ]
       }
     ]
