--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
@@ -19,7 +20,8 @@
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -27,6 +29,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
